brat/test/golden/error/vec_length2.brat
f(X :: *, X, n :: #, Vec(X, n)) -> Vec(X, n)
f(_, x, _, xs) = x ,- xs
